sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
var boule: Boolean = true
^AlgBubbleSort1:2: error: expected class or object definition
var boule: Boolean = true
^AlgBubbleSort1:3: error: expected class or object definition
var c =0
^AlgBubbleSort1:4: error: expected class or object definition
var temp=0
^AlgBubbleSort1:5: error: expected class or object definition
def bubbleSort()  {
^